Improve UI responsiveness

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,7 @@
 {
   "greeting.morning": "Good morning,",
+  "greeting.afternoon": "Good afternoon,",
+  "greeting.evening": "Good evening,",
   "greeting.subtext": "here is how your day looks like!",
   "weatherHeader": "Weather in Nairobi",
   "temperature": "Temperature",
@@ -9,11 +11,19 @@
   "weather.precipitation": "Precipitation:",
   "weather.humidity": "Humidity:",
   "weather.wind": "Wind:",
-  "weather.lightRain": "Light Rain",
-  "weather.moderateRain": "Moderate Rain",
-  "weather.heavyRain": "Heavy Rain",
-  "weather.clearSky": "Clear Sky",
-  "weather.fewClouds": "Few Clouds",
+  "weather.clearsky": "Clear sky",
+  "weather.fewclouds": "Few clouds",
+  "weather.scatteredclouds": "Scattered clouds",
+  "weather.brokenclouds": "Broken clouds",
+  "weather.showerrain": "Shower rain",
+  "weather.rain": "Rain",
+  "weather.lightrain": "Light rain",
+  "weather.moderaterain": "Moderate rain",
+  "weather.heavyintensityrain": "Heavy intensity rain",
+  "weather.thunderstorm": "Thunderstorm",
+  "weather.thunderstorm.lightthunderstorm": "Light thunderstorm",
+  "weather.snow": "Snow",
+  "weather.mist": "Mist",
   "forecast.title": "5-day forecast",
   "sidebar.dashboard": "Dashboard",
   "sidebar.map": "Map",
