--- a/src/locales/sw.json
+++ b/src/locales/sw.json
@@ -1,5 +1,7 @@
 {
   "greeting.morning": "Habari za asubuhi,",
+  "greeting.afternoon": "Habari za mchana,",
+  "greeting.evening": "Habari za jioni,",
   "greeting.subtext": "hivi ndivyo siku yako inavyoonekana!",
   "weatherHeader": "Hali ya Hewa Nairobi",
   "temperature": "Joto",
@@ -9,11 +11,19 @@
   "weather.precipitation": "Kiwango cha mvua:",
   "weather.humidity": "Unyevunyevu:",
   "weather.wind": "Upepo:",
-  "weather.lightRain": "Mvua Nyepesi",
-  "weather.moderateRain": "Mvua ya Wastani",
-  "weather.heavyRain": "Mvua Kubwa",
-  "weather.clearSky": "Anga Safi",
-  "weather.fewClouds": "Mawingu Machache",
+  "weather.clearsky": "Anga safi",
+  "weather.fewclouds": "Mawingu machache",
+  "weather.scatteredclouds": "Mawingu yaliyotawanyika",
+  "weather.brokenclouds": "Mawingu yaliyovunjika",
+  "weather.showerrain": "Mvua za manyunyu",
+  "weather.rain": "Mvua",
+  "weather.lightrain": "Mvua nyepesi",
+  "weather.moderaterain": "Mvua ya wastani",
+  "weather.heavyintensityrain": "Mvua nzito",
+  "weather.thunderstorm": "Dhoruba",
+  "weather.thunderstorm.lightthunderstorm": "Dhoruba nyepesi",
+  "weather.snow": "Theluji",
+  "weather.mist": "Ukungu",
   "forecast.title": "Utabiri wa Siku 5",
   "sidebar.dashboard": "Dashibodi",
   "sidebar.map": "Ramani",
